[package]
name = "ld-memory"
version = "0.2.5"
authors = [ "Kaspar Schleiser <kaspar@schleiser.de>" ]
edition = "2021"
description = "Helper crate to programmatically create GNU ld MEMORY blocks"
license = "MIT OR Apache-2.0"
categories = ["development-tools::build-utils"]
readme = "README.md"
repository = "https://github.com/kaspar030/ld-memory"

[dependencies]
