[package]
name = "ld-memory"
version = "0.2.9"
authors = [ "Kaspar Schleiser <kaspar@schleiser.de>" ]
edition = "2024"
description = "Helper crate to programmatically create GNU ld MEMORY blocks"
license = "MIT OR Apache-2.0"
categories = ["development-tools::build-utils"]
readme = "README.md"
repository = "https://github.com/kaspar030/ld-memory"
rust-version = "1.85"

[dependencies]
evalexpr = { version = "11.0.0", optional = true }

[features]
build-rs = []
parse = [ "dep:evalexpr" ]
