[package]
name = "ld-memory-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "tool to create .ld MEMORY sections via cli"

[[bin]]
name = "ld-memory"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
evalexpr = "11.0.0"
ld-memory.workspace = true
