[package]
name = "ld-memory-cli"
version = "0.2.6"
authors = [ "Kaspar Schleiser <kaspar@schleiser.de>" ]
edition = "2021"
description = "tool to create .ld MEMORY sections via cli"
repository = "https://github.com/kaspar030/ld-memory"
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "ld-memory"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
evalexpr = "11.0.0"
ld-memory = { version = "0.2.6", path = "../../lib/ld-memory" }

[package.metadata.release]
tag-name = "{{version}}"
